Ensure form label wraps/targets the field its intended for.

--- a/client/my-sites/domains/domain-management/site-redirect/style.scss
+++ b/client/my-sites/domains/domain-management/site-redirect/style.scss
@@ -3,6 +3,14 @@
 		margin-bottom: 10px;
 	}
 
+	.form-text-input-with-affixes {
+		margin-top: 5px;
+	}
+
+	.form-text-input-with-affixes__prefix {
+		font-weight: normal;
+	}
+
 	&.fetching input[type='text'] {
 		animation: pulse-light 0.8s ease-in-out infinite;
 		background: var( --color-neutral-10 );
